terraform/AKSCR/k8s/demo/2.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}-deployment
  template:
    metadata:
      labels:
        app: ${APP_NAME}-deployment
    spec:
      containers:
        - name: ${APP_NAME}-deployment
          image: ${DEPLOY_IMAGE}
          resources:
            limits:
              cpu: 200m
              memory: 150M
            requests:
              cpu: 50m
              memory: 50M
          ports:
            - containerPort: 80
